<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="@dimen/dp_10"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_code"
        style="@style/recyclerView_TextStyle"
        android:text="@string/barcode" />

    <TextView
        android:id="@+id/text_name"
        style="@style/recyclerView_TextStyle"
        android:text="@string/goods_name"
        app:layout_constraintTop_toBottomOf="@+id/text_code" />

    <TextView
        android:id="@+id/text_num"
        style="@style/recyclerView_TextStyle"
        android:text="@string/num"
        app:layout_constraintTop_toBottomOf="@+id/text_name" />

    <TextView
        android:id="@+id/text_check_num"
        style="@style/recyclerView_TextStyle"
        android:text="@string/check_num"
        app:layout_constraintLeft_toRightOf="@+id/text_num"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_num" />

</android.support.constraint.ConstraintLayout>