<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hzx.wms.setting.SettingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:contentInsetStart="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/setting"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/dp_40"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="@dimen/dp_5"
            android:src="@drawable/img_back" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/text_update"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@drawable/touch_bg"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_10"
        android:text="@string/update" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorBlack"
        app:layout_constraintTop_toBottomOf="@+id/text_update" />


    <TextView
        android:id="@+id/text_login_out"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@drawable/touch_bg"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_10"
        android:text="@string/login_out" />


    <TextView
        android:id="@+id/text_tinker_version"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/dp_10"
        android:background="@drawable/touch_bg"
        android:gravity="bottom|center"
        android:paddingEnd="@dimen/dp_10"
        android:paddingStart="@dimen/dp_10"
        android:text="@string/tinker_id" />


</LinearLayout>
