<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/scrollView"
    android:background="@drawable/background_gradient">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_100"
        app:cardCornerRadius="@dimen/dp_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp_20">

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:background="@drawable/textview_border"
                android:hint="@string/account"
                android:maxLines="1"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_15" />

            <EditText
                android:id="@+id/edt_pwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="20dp"
                android:background="@drawable/textview_border"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_15" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@color/colorPrimary"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_15"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v7.widget.CardView>


</ScrollView>