<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/touch_bg"
    android:clickable="true"
    android:focusable="true"
    android:padding="@dimen/dp_10">


    <TextView
        android:id="@+id/text_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/barcode"
        android:textColor="@color/color454545" />

    <TextView
        android:id="@+id/text_barcode_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textColor="@color/color454545"
        app:layout_constraintLeft_toRightOf="@+id/text_barcode" />

    <TextView
        android:id="@+id/text_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textColor="@color/color454545"
        app:layout_constraintRight_toLeftOf="@+id/text_location_value"
        app:layout_constraintTop_toTopOf="@+id/text_barcode" />

    <TextView
        android:id="@+id/text_location_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:minWidth="@dimen/dp_70"
        android:text="AA001"
        android:textColor="@color/color454545"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_location" />

    <TextView
        android:id="@+id/text_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num"
        android:textColor="@color/color454545"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/text_picked_value"
        app:layout_constraintTop_toBottomOf="@+id/text_location" />


    <TextView
        android:id="@+id/text_num_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/color454545"
        app:layout_constraintLeft_toRightOf="@+id/text_num"
        app:layout_constraintTop_toTopOf="@+id/text_num" />

    <TextView
        android:id="@+id/text_picked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="已捡:"
        android:textColor="@color/color454545"
        app:layout_constraintRight_toLeftOf="@+id/text_picked_value"
        app:layout_constraintTop_toTopOf="@+id/text_num" />

    <TextView
        android:id="@+id/text_picked_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/dp_70"
        android:text="0"
        android:textColor="@color/green"
        app:layout_constraintLeft_toRightOf="@+id/text_num"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_picked" />

    <TextView
        android:textColor="@color/color454545"
        app:layout_constraintTop_toBottomOf="@+id/text_num"
        android:id="@+id/text_name"
        android:text="名称："
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</android.support.constraint.ConstraintLayout>
